--- a/backend/app/templates/reset_password.html
+++ b/backend/app/templates/reset_password.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h3>Password Reset Request</h3>
     <p>Hello {{ fullname }},</p>
-    <p>We received a request to reset your account password.</p>
+    <p>We have received a request to reset your account password.</p>
     <p>If this is you, please click the button below to create a new password:</p>
     
     <div style="text-align: center;">
@@ -11,6 +11,6 @@
     </div>
     
     <p style="margin-top: 20px; font-size: 12px; color: #64748b;">
-        This link is valid for 15 minutes. If you don't request it, your account remains secure.
+        This link is valid for 15 minutes. If you do not request the link, your account remains secure.
     </p>
 {% endblock %}
